# mesh_tools

./: CMakeLists.txt  README.md  package.xml  setup.py
meshes/: cube.dae  mx64.stl
scripts/: hardware.py  mesh_macro.py
src/mesh_tools/: collada_mesh.py  mesh.py  stl_mesh.py
urdf/: example.urdf.xacro
