<?xml version="1.0"?>
<package format="2">
  <name>mesh_tools</name>
  <version>0.0.0</version>
  <description>The mesh_tools package</description>

  <maintainer email="zach.inbox@gmail.com">Zach Anderson</maintainer>
  <author email="zach.inbox@gmail.com">Zach Anderson</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>python-numpy-stl-pip</exec_depend>
  <exec_depend>python-collada</exec_depend>
  <exec_depend>resource_retriever</exec_depend>

  <export></export>
</package>
